Revert "fix ut user.timezone"
This reverts commit f59bbb85319c89a15de1405c880b4be7b9959d21.